--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "echarts": "^5.4.0",
     "element-plus": "^2.2.17",
     "less": "^4.1.3",
     "mockjs": "^1.1.0",
