--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "echarts": "^5.4.0",
     "element-plus": "^2.2.17",
+    "js-cookie": "^3.0.1",
     "less": "^4.1.3",
     "mockjs": "^1.1.0",
     "vue": "^3.2.37",
